@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added interface to set color chooser mode (STR #2407)
 	- Fixed compile errors when HAVE_LIBJPEG was not defined 
 	  (STR #2382)
 	- Fixed special handling for ISO back-tab keycode (STR #2369)
